--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
     <!-- Required meta tags always come first -->
@@ -38,20 +38,22 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
-            </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a role="button" href="#reservation" type="submit" class="btn btn-sm btn-block " style="background-color: #ffcb15; color:black"><strong>Reserve Table</strong></a>
+                </div>
         </div>
     </header>
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-xs-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
@@ -60,7 +62,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
 
                     <div class="media-body">
-                        <h2 class="mt-0">Uthapizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                        <h2 class="mt-0" >Uthapizza <span class="badge badge-danger ">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
                         <p class="d-none d-sm-block">
                             A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
@@ -77,20 +79,25 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
+            <div class="col-12 col-sm-12 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-xs-3 col-sm col-md">
+                <h2 class="col-xs-3">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
+
+            <div class="media-heading col-xs-3">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+            </div>
+
         </div>
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="media">
+            <div class="media col-md-9">
                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
 
             <div class="media-body">
@@ -102,6 +109,80 @@
             </div>
         </div>
 
+        <div id="reservation" class="row row-content">
+            <div class="col-12 col-sm-12 col-md-8 offset-md-2">
+                        <div class="card">
+                            <h3 class="card-header text-white" style="background-color: #ffcb15;">
+                                Reserve a Table</h3>
+                            
+                            <div class="card-body">
+                                <!-- <dl class="row"> -->
+                                    <form>
+                                        <div class="form-group row offset-1">
+                                            <label for="optradio" class="col-12 col-sm-2 col-xs-12 col-form-label"><strong>Number of Guests</strong></label>
+                                            <!-- <div class="col-md-8 form-check-inline">
+                                                <input type="radio" name="number" value="1" style="margin-right:0px;"><span>  1</span> 
+                                                <input type="radio" name="number" value="2" style="margin-left:10px;"><span>  2</span>
+                                                <input type="radio" name="number" value="3" style="margin-left:10px;"><span>  3</span> 
+                                                <input type="radio" name="number" value="4" style="margin-left:10px;"><span>  4</span> 
+                                                <input type="radio" name="number" value="5" style="margin-left:10px;"><span>  5</span> 
+                                                <input type="radio" name="number" value="6" style="margin-left:10px;"><span>  6</span>  
+                                            </div> -->
+                                                <div class="col-12 col-sm-10">
+                                                <div class="form-check-inline">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">1
+                                                  </label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">2
+                                                  </label>
+                                                </div>
+                                                <div class="form-check-inline disabled">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">3
+                                                  </label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">4
+                                                  </label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">5
+                                                  </label>
+                                                </div>
+                                                <div class="form-check-inline disabled">
+                                                  <label class="form-check-label">
+                                                    <input type="radio" class="form-check-input" name="optradio">6
+                                                  </label>
+                                                </div>
+                                                </div>
+                                        </div>
+                                            
+                                        <div class="form-group row offset-1">
+                                            <label for="date" class="col-12 col-xs-12 col-md-2 col-form-label"><strong>Date and time</strong></label>
+                                                <div class="col-12 col-md-4">
+                                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                                </div>
+                                                <div class="col-12 col-sm-4">
+                                                    <input type="text" class="form-control " id="date" name="date" placeholder="Time">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row offset-1">
+                                            <div class="col-12 col-xs-12 col-md-2 col-form-label offset-md-2">
+                                                <button type="submit" class="btn btn-primary">Reserve</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                <!-- </dl> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </div>
 
     <footer class="footer">
