--- a/index.html
+++ b/index.html
@@ -103,6 +103,58 @@
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid"
+                                src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                                <p class="d-none d-sm-block">
+                                A unique combination of Indian Uthappam (pancake) and
+                                Italian pizza, topped with Cerignola olives, ripe vine
+                                cherry tomatoes, Vidalia onion, Guntur chillies and
+                                Buffalo Paneer.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                                </div>
+                        </div>
+
+                        <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Alberto Somayya</h2>
+                                    <h4>Executive Chef</h4>
+                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                                </div>
+
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <div class="row row-content align-items-center">
             <div class="col-xs-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -171,14 +223,7 @@
                                     <form>
                                         <div class="form-group row offset-1">
                                             <label for="optradio" class="col-12 col-sm-2 col-xs-12 col-form-label"><strong>Number of Guests</strong></label>
-                                            <!-- <div class="col-md-8 form-check-inline">
-                                                <input type="radio" name="number" value="1" style="margin-right:0px;"><span>  1</span> 
-                                                <input type="radio" name="number" value="2" style="margin-left:10px;"><span>  2</span>
-                                                <input type="radio" name="number" value="3" style="margin-left:10px;"><span>  3</span> 
-                                                <input type="radio" name="number" value="4" style="margin-left:10px;"><span>  4</span> 
-                                                <input type="radio" name="number" value="5" style="margin-left:10px;"><span>  5</span> 
-                                                <input type="radio" name="number" value="6" style="margin-left:10px;"><span>  6</span>  
-                                            </div> -->
+                                            
                                                 <div class="col-12 col-sm-10">
                                                 <div class="form-check-inline">
                                                   <label class="form-check-label">
