--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" style="scroll-behavior: smooth;">
 
 <head>
@@ -32,7 +32,7 @@
                 </ul>
 
                 <span class="navbar-text">
-                    <a data-toggle="modal" href="#loginModal">
+                    <a id="loginButton" href="#loginModal">
                         <span class="fa fa-sign-in"></span>Login
                     </a>
 
@@ -48,7 +48,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismiss="modal">
+                    <button type="button" id="closeLogin" class="close">
                         &times;
                     </button>
                 </div>
@@ -88,7 +88,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a table</h4>
-                    <button type="button" class="close" data-dismiss="modal">
+                    <button type="button" id="closeReserve" class="close">
                         &times;
                     </button>
                 </div>
@@ -451,6 +451,27 @@
         });
     </script>
 
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#loginButton").click(function(){
+                $("#loginModal").modal("toggle");
+            });
+            $("#closeLogin").click(function(){
+                $("#loginModal").modal("hide");
+            });
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#closeReserve").click(function(){
+                $("#reserveModal").modal("toggle");
+            });
+            $("#closeLogin").click(function(){
+                $("#closeReserve").modal("hide");
+            });
+        });
+    </script>
 
     <!-- <script type="text/javascript">
         $(document).ready(function(){
